@@ -52,6 +52,27 @@ building a more vibrant, thriving community around it.</p>
 <p>We are calling for participants and speakers now! Please send your talk
 proposal to the <a href="mailto:asia-summit AT gnome DOT org">organization committee</a>.</p>
 
+<h3><a href="http://live.gnome.org/SpeckHackFest2008">Speck Hack Fest 2008</a></h3>
+<i>November 10-13, Bolzano, Italy</i>
+<p>The Speck Hack Fest is a hackfest for GNOME developers and contributors. It
+will be held at the <a href="http://www.tis.bz.it/">TIS innovation park</a> in
+<a href="http://www.bolzano-bozen.it/en/bolzano-gateway-to-the-dolomites.htm">Bolzano (Italy)</a>,
+an innovative and technological center in Bolzano. The theme of
+this hackfest will be the Webkit Integration into GNOME, but if you want to
+talk and work about other GNOME related things, just put yourself on the
+<a href="http://live.gnome.org/SpeckHackFest2008/Ideas">Session page</a>.
+The Speck Hack Fest will end with the <a href="http://www.sfscon.it/2008/">Free
+Software Conference</a>, which will be on 14th November.
+</p>
+<p>
+Please note that
+<ahref="http://sfscon.it/2008/registration/gnome-registration">registration</a>
+is needed to participate at this event.
+Accomodation packages are also available.
+</p>
+
+<p><a href="http://live.gnome.org/SpeckHackFest2008">Come along and get involved!</a></p>
+
 </div>
 
 </div>
