@@ -18,9 +18,9 @@
       <ul>
         <li><a href="http://www.gnome.org/projects">Gnome Projects</a>
           <ul>
-            <li><a href="index.html">Home</a> </li>
-            <li><a href="tour.html">Tour</a> </li>
-            <li class="current"><a href="download.html">Download</a> </li>
+            <li><a href="index">Home</a> </li>
+            <li><a href="tour">Tour</a> </li>
+            <li class="current"><a href="download">Download</a> </li>
             <li><a href="http://live.gnome.org/Cheese/FAQ">FAQ</a> </li>
             <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
             <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
@@ -33,7 +33,8 @@
 
       <div id="top">
 
-        <a href="screenshots.html"> <img src="data/images/cheese-big.png" alt="cheese!"/> </a>
+        <!-- <a href="screenshots"> <img src="data/images/cheese-big.png" alt="cheese!"/> </a> -->
+        <img src="data/images/cheese-big.png" alt="cheese!"/>
 
       </div><!-- top -->
 
