@@ -18,9 +18,9 @@
       <ul>
         <li><a href="http://www.gnome.org/projects">Gnome Projects</a>
           <ul>
-            <li class="current"><a href="index.html">Home</a> </li>
-            <li><a href="tour.html">Tour</a> </li>
-            <li><a href="download.html">Download</a> </li>
+            <li class="current"><a href="index">Home</a> </li>
+            <li><a href="tour">Tour</a> </li>
+            <li><a href="download">Download</a> </li>
             <li><a href="http://live.gnome.org/Cheese/FAQ">FAQ</a> </li>
             <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
             <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
@@ -32,10 +32,10 @@
     <div id="body">
 
       <div id="top">
-        <!--  <a href="screenshots.html"> <img src="data/images/cheese-big.png" alt="cheese!"/> </a> -->
-        <!-- <a href="tour.html"> <img src="data/images/cheese-tour.png" alt="cheese tour"/> </a> -->
+        <!--  <a href="screenshots"> <img src="data/images/cheese-big.png" alt="cheese!"/> </a> -->
+        <!-- <a href="tour"> <img src="data/images/cheese-tour.png" alt="cheese tour"/> </a> -->
         <!-- <a href="http://home.cs.tum.edu/~siegel/news/2008_06_12-awesomeness"> <img src="data/images/cheese-birthday.png" alt="cheese birthday"/> </a> -->
-        <a href="tour.html"> <img src="data/images/cheese-2.24.png" alt="cheese tour"/> </a>
+        <a href="tour"> <img src="data/images/cheese-2.24.png" alt="cheese tour"/> </a>
       </div><!-- top -->
 
       <!--
@@ -153,7 +153,7 @@
             <li>documentation update, courtesy of Joshua Henderson</li>
             <li>added/updated translations</li>
           </ul>
-          <a href="download.html">Download it</a>
+          <a href="download">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00117.html">full release notes</a>)
 
           <h3>September 8th 2008</h3>
@@ -169,7 +169,7 @@
             <li>documentation update</li>
             <li>added/updated translations</li>
           </ul>
-          <a href="download.html">Download it</a>
+          <a href="download">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00067.html">full release notes</a>)
 
           <h3>September 1st 2008</h3>
@@ -184,7 +184,7 @@
             <li>update waf to 1.4.3 and make it working again</li>
             <li>added/updated translations</li>
           </ul>
-          <a href="download.html">Download it</a>
+          <a href="download">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00015.html">full release notes</a>)
 
         </div>
