@@ -33,9 +33,9 @@
       <ul>
         <li><a href="http://www.gnome.org/projects">Gnome Projects</a>
           <ul>
-            <li><a href="index.html">Home</a> </li>
-            <li class="current"><a href="tour.html">Tour</a> </li>
-            <li><a href="download.html">Download</a> </li>
+            <li><a href="index">Home</a> </li>
+            <li class="current"><a href="tour">Tour</a> </li>
+            <li><a href="download">Download</a> </li>
             <li><a href="http://live.gnome.org/Cheese/FAQ">FAQ</a> </li>
             <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
             <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
@@ -47,9 +47,9 @@
     <div id="body">
 
       <div id="top">
-        <!--  <a href="screenshots.html"> <img src="data/images/cheese-big.png" alt="cheese!"/></a> -->
-        <!-- <a href="tour.html"> <img src="data/images/cheese-tour.png" alt="cheese tour"/></a> -->
-        <a href="tour.html"> <img src="data/images/cheese-2.24.png" alt="cheese tour"/></a>
+        <!--  <a href="screenshots"> <img src="data/images/cheese-big.png" alt="cheese!"/></a> -->
+        <!-- <a href="tour"> <img src="data/images/cheese-tour.png" alt="cheese tour"/></a> -->
+        <a href="tour"> <img src="data/images/cheese-2.24.png" alt="cheese tour"/></a>
       </div><!-- top -->
 
       <div id="bottom">
