@@ -1,3 +1,11 @@
+2008-10-04  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/index.wml,
+	  www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/tour.html: 
+	  remove the html suffix from the cheese page links
+
 2008-09-30  Dave Neary  <dneary@gnome.org>
 
 	* www.gnome.org/mobile/index.wml
